--- a/src/ba/unsa/etf/rpr/geografija.fxml
+++ b/src/ba/unsa/etf/rpr/geografija.fxml
@@ -1,26 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.GeografijaDAO">
+<AnchorPane prefHeight="426.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.GeografijaDAO">
    <children>
-      <BorderPane prefHeight="400.0" prefWidth="300.0">
-         <top>
-            <ToolBar maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-              <items>
-                <Button fx:id="dodaj" mnemonicParsing="false" onAction="#dodajGrad" text="Dodaj grad" />
-                  <Button fx:id="izmijeni" mnemonicParsing="false" onAction="#izmijeniGrad1" text="Izmijeni grad" />
-              </items>
-            </ToolBar>
-         </top>
+      <BorderPane layoutY="52.0" prefHeight="400.0" prefWidth="300.0">
          <center>
-            <TableView fx:id="tabelaGradova" prefHeight="360.0" prefWidth="293.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tabelaGradova" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="359.0" prefWidth="300.0" BorderPane.alignment="CENTER">
               <columns>
                 <TableColumn fx:id="id" prefWidth="30.4000244140625" text="ID" />
                 <TableColumn fx:id="naziv" text="NAZIV" />
@@ -30,18 +25,9 @@
             </TableView>
          </center>
       </BorderPane>
-      <BorderPane layoutX="300.0" prefHeight="400.0" prefWidth="300.0">
-         <top>
-            <ToolBar maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-               <items>
-                  <Button fx:id="dodajD" mnemonicParsing="false" onAction="#dodajDrzavu" text="Dodaj drzavu" />
-                  <Button fx:id="obrisiD" mnemonicParsing="false" onAction="#obrisiDrzavu" text="Obrisi drzavu" />
-                  <Button fx:id="nadiD" mnemonicParsing="false" onAction="#nadiDrzavu" text="Nadji drzavu" />
-               </items>
-            </ToolBar>
-         </top>
+      <BorderPane layoutX="300.0" layoutY="52.0" prefHeight="400.0" prefWidth="300.0">
          <center>
-            <TableView fx:id="tabelaDrzava" prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tabelaDrzava" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="359.0" prefWidth="300.0" BorderPane.alignment="CENTER">
                <columns>
                   <TableColumn fx:id="nazivD" prefWidth="92.0" text="NAZIV" />
                   <TableColumn fx:id="glavniGrad1" minWidth="0.0" prefWidth="131.20001220703125" text="GLAVNI GRAD" />
@@ -50,5 +36,40 @@
             </TableView>
          </center>
       </BorderPane>
+      <VBox prefHeight="100.0" prefWidth="600.0">
+         <children>
+            <MenuBar prefHeight="29.0" prefWidth="591.0">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                        <MenuItem mnemonicParsing="false" text="Open" />
+                    <MenuItem mnemonicParsing="false" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                        <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+            <ToolBar maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="43.0" prefWidth="612.0">
+              <items>
+                <Button fx:id="dodaj" mnemonicParsing="false" onAction="#dodajGrad" text="Dodaj grad" />
+                  <Button fx:id="izmijeni" mnemonicParsing="false" onAction="#izmijeniGrad1" text="Izmijeni grad" />
+                  <Button fx:id="dodajD" mnemonicParsing="false" onAction="#dodajDrzavu" text="Dodaj drzavu" />
+                  <Button fx:id="obrisiD" mnemonicParsing="false" onAction="#obrisiDrzavu" text="Obrisi drzavu" />
+                  <Button fx:id="nadiD" mnemonicParsing="false" onAction="#nadiDrzavu" text="Nadji drzavu" />
+                  <Button fx:id="ispisi" mnemonicParsing="false" onAction="#stampaj" text="Ispisi" />
+              </items>
+            </ToolBar>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
