--- a/src/ba/unsa/etf/rpr/geografija.fxml
+++ b/src/ba/unsa/etf/rpr/geografija.fxml
@@ -42,7 +42,8 @@
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                        <MenuItem mnemonicParsing="false" text="Open" />
+                        <MenuItem fx:id="open" mnemonicParsing="false" onAction="#otvori" text="Open" />
+                        <MenuItem fx:id="save" mnemonicParsing="false" onAction="#snimi" text="Save" />
                     <MenuItem mnemonicParsing="false" text="Close" />
                   </items>
                 </Menu>
