--- a/src/ba/unsa/etf/rpr/geografija.fxml
+++ b/src/ba/unsa/etf/rpr/geografija.fxml
@@ -49,7 +49,7 @@
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
                   <items>
-                        <MenuItem mnemonicParsing="false" text="Unspecified Action" />
+                        <MenuItem mnemonicParsing="false" text="Change language" />
                     <MenuItem mnemonicParsing="false" text="Delete" />
                   </items>
                 </Menu>
