--- a/src/ba/unsa/etf/rpr/geografija.fxml
+++ b/src/ba/unsa/etf/rpr/geografija.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="426.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.GeografijaDAO">
+<AnchorPane prefHeight="426.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.ProgramController">
    <children>
       <BorderPane layoutY="52.0" prefHeight="400.0" prefWidth="300.0">
          <center>
@@ -62,12 +62,12 @@
             </MenuBar>
             <ToolBar maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="43.0" prefWidth="612.0">
               <items>
-                <Button fx:id="dodaj" mnemonicParsing="false" onAction="#dodajGrad" text="Dodaj grad" />
-                  <Button fx:id="izmijeni" mnemonicParsing="false" onAction="#izmijeniGrad1" text="Izmijeni grad" />
-                  <Button fx:id="dodajD" mnemonicParsing="false" onAction="#dodajDrzavu" text="Dodaj drzavu" />
-                  <Button fx:id="obrisiD" mnemonicParsing="false" onAction="#obrisiDrzavu" text="Obrisi drzavu" />
-                  <Button fx:id="nadiD" mnemonicParsing="false" onAction="#nadiDrzavu" text="Nadji drzavu" />
                   <Button fx:id="ispisi" mnemonicParsing="false" onAction="#stampaj" text="Ispisi" />
+                <Button fx:id="dodaj" mnemonicParsing="false" text="Dodaj grad" />
+                  <Button fx:id="izmijeni" mnemonicParsing="false" text="Izmijeni grad" />
+                  <Button fx:id="dodajD" mnemonicParsing="false" text="Dodaj drzavu" />
+                  <Button fx:id="obrisiD" mnemonicParsing="false" text="Obrisi drzavu" />
+                  <Button fx:id="nadiD" mnemonicParsing="false" text="Nadji drzavu" />
               </items>
             </ToolBar>
          </children>
