--- a/src/ba/unsa/etf/rpr/program.fxml
+++ b/src/ba/unsa/etf/rpr/program.fxml
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
@@ -11,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.ProgramController">
+<BorderPane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.ProgramController">
     <top>
         <VBox BorderPane.alignment="CENTER">
             <children>
@@ -19,6 +18,9 @@
                     <menus>
                         <Menu mnemonicParsing="false" text="File">
                             <items>
+                        <MenuItem mnemonicParsing="false" onAction="#otvori" text="Open" />
+                        <MenuItem fx:id="save" mnemonicParsing="false" onAction="#snimi" text="Save As" />
+                        <MenuItem mnemonicParsing="false" onAction="#stampaj" text="Print" />
                                 <MenuItem mnemonicParsing="false" text="Close" />
                             </items>
                         </Menu>
@@ -26,10 +28,10 @@
                             <items>
                                 <Menu mnemonicParsing="false" text="Language">
                                     <items>
-                                        <MenuItem mnemonicParsing="false" text="Bosanski" onAction="#setBa"/>
-                                        <MenuItem mnemonicParsing="false" text="English" onAction="#setEn"/>
-                                        <MenuItem mnemonicParsing="false" text="Deutsch" onAction="#setDe"/>
-                                        <MenuItem mnemonicParsing="false" text="Frnacois" onAction="#setFr"/>
+                                        <MenuItem mnemonicParsing="false" onAction="#setBa" text="Bosanski" />
+                                        <MenuItem mnemonicParsing="false" onAction="#setEn" text="English" />
+                                        <MenuItem mnemonicParsing="false" onAction="#setDe" text="Deutsch" />
+                                        <MenuItem mnemonicParsing="false" onAction="#setFr" text="Frnacois" />
                                     </items>
                                 </Menu>
                             </items>
